--- a/templates/base.gestion.html.twig
+++ b/templates/base.gestion.html.twig
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto h-100">
                 <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="{{path('commande_all')}}">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                     <span class="sr-only">(current)</span>
                 </a>
@@ -104,7 +104,7 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <a class="nav-link d-block" href="login.html">
+                <a class="nav-link d-block" href="{{path('app_logout')}}">
                     Admin, <b>Logout</b>
                 </a>
                 </li>
@@ -113,9 +113,9 @@
         </div>
         </nav>
 
-    {% block card_body %}
+        {% block card_body %}
 
-    {% endblock %}
+        {% endblock %}
 
 
     {% endblock %}
