--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -106,7 +106,7 @@
                                     {% for item in menus %}
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <a href="{{path('produit_details',{'idProd':item.id})}}"><img src="{{asset('pics/')}}{{item.image}}" alt="Image"></a>
+                                            <a href="{{path('menu_details',{'idProd':item.id})}}"><img src="{{asset('pics/')}}{{item.image}}" alt="Image"></a>
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>{{item.nom}}</span> <strong>{{item.prix}} CFA</strong></h3>
